[gd_scene load_steps=9 format=3 uid="uid://djme0ofsgpbre"]

[ext_resource type="Script" path="res://world.gd" id="1_s2pll"]
[ext_resource type="PackedScene" uid="uid://b3thqqvltvxow" path="res://player.tscn" id="2_7nxto"]
[ext_resource type="PackedScene" uid="uid://dir46c180fbks" path="res://level_completed.tscn" id="5_4n6mg"]
[ext_resource type="PackedScene" uid="uid://d162bu4twsmvt" path="res://hearts_collected.tscn" id="6_kves2"]
[ext_resource type="PackedScene" uid="uid://crh0ermirr0xk" path="res://level_tile_map.tscn" id="6_pn38h"]

[sub_resource type="Animation" id="Animation_8erlo"]
resource_name = "Countdown"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/StartIn/CenterContainer/StartInLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2, 2.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["START IN: 3", "START IN: 2
", "START IN: 1"]
}

[sub_resource type="Animation" id="Animation_o2hoy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/StartIn/CenterContainer/StartInLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["START IN: 3"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p0l1f"]
_data = {
"Countdown": SubResource("Animation_8erlo"),
"RESET": SubResource("Animation_o2hoy")
}

[node name="World" type="Node2D"]
script = ExtResource("1_s2pll")

[node name="Player" parent="." instance=ExtResource("2_7nxto")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LevelCompleted" parent="CanvasLayer" instance=ExtResource("5_4n6mg")]
process_mode = 3
visible = false

[node name="HeartsCollected" parent="CanvasLayer" instance=ExtResource("6_kves2")]
offset_left = 2.0
offset_top = 3.0
offset_right = -233.0
offset_bottom = -140.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="StartIn" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.407843)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/StartIn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartInLabel" type="Label" parent="CanvasLayer/StartIn/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "START IN: 3"

[node name="LevelTimerLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(12, 0)
anchors_preset = -1
anchor_left = 0.44075
anchor_right = 0.733875
anchor_bottom = 0.094
offset_left = -0.0400085
offset_right = 0.159988
offset_bottom = 0.0799999
size_flags_horizontal = 0
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="LevelTileMap" parent="." instance=ExtResource("6_pn38h")]
position = Vector2(1, 1)

[node name="CountDownPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_p0l1f")
}

[connection signal="nextlevel" from="CanvasLayer/LevelCompleted" to="." method="_on_level_completed_nextlevel"]
[connection signal="retry" from="CanvasLayer/LevelCompleted" to="." method="_on_level_completed_retry"]
